manifests/showks-aggregator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-aggregator-temp
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
    nginx.org/ssl-services: "showks-aggregator-temp"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - aggregator.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: aggregator.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-aggregator-temp
          servicePort: 8081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-aggregator
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-aggregator"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - aggregator.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: aggregator.showks.cloudnativedaysb.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-aggregator
          servicePort: 8081
